Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2416

Cannot use TCompactProtocol with MSVC

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9.1
    • 0.9.2
    • C++ - Library
    • MSVC 11

    Description

      Cannot use TCompactProtocol with MSVC as it appears that SIGNED_RIGHT_SHIFT_IS and ARITHMETIC_RIGHT_SHIFT are not defined.

      Attachments

        1. THRIFT-2416.patch
          0.5 kB
          Konrad Grochowski

        Issue Links

          Activity

            People

              roger Roger Meier
              chris5287 Chris Stylianou
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: