THRIFT-2416 Cannot use TCompactProtocol with MSVC

Patch: Konrad Grochowski